test/libyul/yulSyntaxTests/functional_partial.yul
{
    let x := byte
}
// ----
// ParserError 7104: (15-19): Builtin function "byte" must be called.
